# nextcandle-api

./: .dockerignore  .gitignore  README.md  auth_middleware.py  database.py  db_control.py  docker-compose.yml  gunicorn_config.py  package.json  pattern_api.py  performance_cache.py  pnpm-lock.yaml  requirements.txt  scheduler.py  users.db
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.module.ts  main.ts  mikro-orm.config.ts
apps/api/src/common/env/: env.service.ts
apps/api/src/entities/: base.entity.ts
apps/api/src/migrations/: Migration20251223162653.ts
apps/api/src/modules/health/: health.controller.ts  health.dto.ts  health.service.spec.ts  health.service.ts  index.ts
apps/api/src/modules/user/: user.module.ts
apps/api/src/modules/user/entities/: user.entity.ts
apps/api/test/: app.integration.spec.ts  setup.ts
apps/api/test/helpers/: testcontainers.ts
apps/serving/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
apps/serving/src/: __init__.py  config.py  main.py
apps/serving/src/routes/: health.py  pattern.py
ml/: .gitignore  requirements.txt
ml/scripts/: pattern_detecter_with_cache_v8_64emd_no_reranker.py
